--- a/src/main/resources/static/blog_edit.html
+++ b/src/main/resources/static/blog_edit.html
@@ -26,20 +26,18 @@
         <span class="spacer"></span>
         <a href="blog_list.html">主页</a>
         <a href="blog_edit.html">写博客</a>
-        <a href="login.html">登陆</a>
         <!-- <a href="#">注销</a> -->
     </div>
     <!-- 编辑框容器 -->
     <div class="blog-edit-container">
         <!-- 标题编辑区 -->
         <div class="title">
-            <input type="text" placeholder="在这里写下文章标题">
+            <input id="title" type="text"  placeholder="在这里写下文章标题">
             <button onclick="mysub()">发布文章</button>
         </div>
         <!-- 创建编辑器标签 -->
         <div id="editorDiv"></div>
     </div>
-
     <script>
         // 初始化编辑器
         var editor = editormd("editorDiv", {
@@ -54,8 +52,33 @@
             saveHTMLToTextarea:true // 
         });
         // 提交
+
+
         function mysub(){
-            // alert(editor.getHTML());
+            var content = encodeURIComponent(editor.getMarkdown());
+            var title = $("#title");
+
+            if(title.val() == "" || content == ""){
+                console.log(title.val())
+                console.log(content);
+                alert("文章内容和标题都不能为空");
+                return;
+            }
+            $.ajax({
+                type:"POST",
+                url:"article/addArticle",
+                data: JSON.stringify({
+                    "title": title.val(),
+                    "content": content,
+                }),
+                contentType:"application/json",
+            }).done(function (data){
+                if(data.state == 1){
+                    alert("发布成功！");
+                }else{
+                    alert(data.msg);
+                }
+            });
         }
     </script>
 </body>
