--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -19,14 +19,14 @@
         <span class="spacer"></span>
         <a href="blog_list.html">主页</a>
         <a href="blog_edit.html">写博客</a>
-        <a href="login.html">登陆</a>
+        <a href="sigin.html">注册</a>
         <!-- <a href="#">注销</a> -->
     </div>
     <!-- 版心 -->
     <div class="login-container">
         <!-- 中间的登陆框 -->
         <div class="login-dialog">
-            <h3>登陆</h3>
+            <h3>登录</h3>
             <div class="row">
                 <span>用户名</span>
                 <input type="text" id="username">
