--- a/src/main/resources/static/blog_list.html
+++ b/src/main/resources/static/blog_list.html
@@ -14,12 +14,11 @@
     <!-- 导航栏 -->
     <div class="nav">
         <img src="img/logo2.jpg" alt="">
-        <span class="title">我的博客系统</span>
+        <span class="title">我的文章</span>
         <!-- 用来占据中间位置 -->
         <span class="spacer"></span>
         <a href="blog_list.html">主页</a>
         <a href="blog_edit.html">写博客</a>
-        <a href="login.html">登陆</a>
         <!-- <a href="#">注销</a> -->
     </div>
     <!-- 版心 -->
@@ -28,7 +27,7 @@
         <div class="container-left">
             <div class="card">
                 <img id="photo" src="img/doge.jpg" class="avtar" alt="">
-                <h3 id="username">比特小可爱</h3>
+                <h3 id="username">加载中...</h3>
                 <a id="github" href="http:www.github.com" >github 地址</a>
                 <div class="counter">
                     <span>文章</span>
@@ -41,48 +40,68 @@
             </div>
         </div>
         <!-- 右侧内容详情 -->
-        <div class="container-right">
+        <div class="container-right" id="main">
             <!-- 每一篇博客包含标题, 摘要, 时间 -->
-            <div class="blog">
-                <div class="title">我的第一篇博客</div>
-                <div class="date">2021-06-02</div>
-                <div class="desc">
-                    从今天起, 我要认真敲代码. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum distinctio ullam eum ut
-                    veroab laborum numquam tenetur est in dolorum a sint, assumenda adipisci similique quaerat vel.
-                    Facere,
-                    et.
-                </div>
-                <a href="blog_content.html?id=1" class="detail">查看全文 &gt;&gt;</a>
-            </div>
-            <div class="blog">
-                <div class="title">我的第二篇博客</div>
-                <div class="date">2021-06-02</div>
-                <div class="desc">
-                    从今天起, 我要认真敲代码. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum distinctio ullam eum ut
-                    veroab laborum numquam tenetur est in dolorum a sint, assumenda adipisci similique quaerat vel.
-                    Facere,
-                    et.
-                </div>
-                <a href="blog_content.html?id=2" class="detail">查看全文 &gt;&gt;</a>
-            </div>
+
         </div>
     </div>
 </body>
 <script src="js/jquery.min.js"></script>
-
+<script src="js/getUserInfo.js"></script>
 <script>
     window.onload = function(){
+        getUserInfo();
+        var main = $("#main");
         $.ajax({
-            type:"GET",
-            url:"user/getUserInfo",
+            type: "GET",
+            url:"article/getArticles",
             data:{
             },
         }).done(function (data){
-            if(data.state == 1){
-                $("#username").text(data.user.username);
-            }
             console.log(data);
-        });
+            if(data.state == 1){
+                if(data.article.length > 0){
+                    for(var i = 0;i < data.article.length;i++){
+                        var time = data.article[i].createtime.split('.')[0].split('T');
+
+                        main.append('<div class="blog">\n' +
+                            '                <div id="title" class="title">'+ data.article[i].title+'</div>\n' +
+                            '                <div class="date"><span id="createtime"></span>' + time[0] + ' ' + time[1]  +' </div>\n' +
+                            '                <div style="height: 70px;width: 100%">\n' +
+                            '\n' +
+                            '                </div>\n' +
+                            '                <div style="float: left;color: #555;font-size: 15px">·阅读: '+ data.article[i].rcount +'</div>\n' +
+                            '                <div>\n' +
+                            '                    <a href="blog_content.html?id='+ data.article[i].id +'" class="detail">查看</a>\n' +
+                            '                    <a href="blog_update.html?id='+ data.article[i].id +'" style="margin-right: 15px" class="detail">编辑</a>\n' +
+                            '                    <a href="javascript:'+ 'onclick=remove('+ data.article[i].id +')" style="margin-right: 15px" class="detail">删除</a>\n' +
+                            '                </div>\n' +
+                            '            </div>\n' +
+                            '            <br>\n' +
+                            '            <hr>\n' +
+                            '            <br>');
+                    }
+                }
+            }
+        })
+    }
+
+    function remove(id){
+        if(confirm("确定要删除嘛？")){
+            $.ajax({
+                type:"GET",
+                url:"article/deleteArt?id=" + id,
+            }).done(function(data){
+                if(data.state == 1){
+                    alert("删除成功");
+                    location.reload();
+                }else{
+                    alert(data.msg);
+                }
+            })
+        }else{
+
+        }
     }
 </script>
 </html>
