--- a/src/main/resources/static/blog_list.html
+++ b/src/main/resources/static/blog_list.html
@@ -30,12 +30,12 @@
                 <h3 id="username">加载中...</h3>
                 <a id="github" href="http:www.github.com" >github 地址</a>
                 <div class="counter">
-                    <span>文章</span>
-                    <span>分类</span>
+                    <span>文章总数: </span>
+                    <span id="allart">0</span>
                 </div>
                 <div class="counter">
-                    <span>2</span>
-                    <span>1</span>
+                    <span >总阅读量: </span>
+                    <span id="rcount">1</span>
                 </div>
             </div>
         </div>
@@ -62,11 +62,10 @@
             if(data.state == 1){
                 if(data.article.length > 0){
                     for(var i = 0;i < data.article.length;i++){
-                        var time = data.article[i].createtime.split('.')[0].split('T');
 
                         main.append('<div class="blog">\n' +
                             '                <div id="title" class="title">'+ data.article[i].title+'</div>\n' +
-                            '                <div class="date"><span id="createtime"></span>' + time[0] + ' ' + time[1]  +' </div>\n' +
+                            '                <div class="date"><span id="createtime"></span>发布时间: ' + data.article[i].createtime +' </div>\n' +
                             '                <div style="height: 70px;width: 100%">\n' +
                             '\n' +
                             '                </div>\n' +
@@ -78,8 +77,7 @@
                             '                </div>\n' +
                             '            </div>\n' +
                             '            <br>\n' +
-                            '            <hr>\n' +
-                            '            <br>');
+                            '            <hr>\n');
                     }
                 }
             }
@@ -100,7 +98,6 @@
                 }
             })
         }else{
-
         }
     }
 </script>
