修改了部分页面信息

--- a/src/main/resources/static/blog_list.html
+++ b/src/main/resources/static/blog_list.html
@@ -13,7 +13,7 @@
 <body>
     <!-- 导航栏 -->
     <div class="nav">
-        <img src="img/logo2.jpg" alt="">
+        <img src="img/logo.png" alt="">
         <span class="title">我的文章</span>
         <!-- 用来占据中间位置 -->
         <span class="spacer"></span>
@@ -28,7 +28,7 @@
             <div class="card">
                 <img id="photo" src="img/doge.jpg" class="avtar" alt="">
                 <h3 id="username">加载中...</h3>
-                <a id="github" href="http:www.github.com" >github 地址</a>
+
                 <div class="counter">
                     <span>文章总数: </span>
                     <span id="allart">0</span>
