--- a/src/main/resources/static/blog_content.html
+++ b/src/main/resources/static/blog_content.html
@@ -14,7 +14,7 @@
 <body>
     <!-- 导航栏 -->
     <div class="nav">
-        <img src="img/logo2.jpg" alt="">
+        <img src="img/logo.png" alt="">
         <span class="title">我的博客系统</span>
         <!-- 用来占据中间位置 -->
         <span class="spacer"></span>
@@ -29,8 +29,7 @@
         <div class="container-left">
             <div class="card">
                 <img src="img/doge.jpg" class="avtar" alt="">
-                <h3 id="username">比特小可爱</h3>
-                <a href="http:www.github.com">github 地址</a>
+                <h3 id="username">小可爱</h3>
                 <div class="counter">
                     <span>文章总数: </span>
                     <span id="allart">0</span>
